[package]
name = "mozilla-root-ca"
version = "2024.12.18" ###BUMP-VERSION.SH###
authors = ["Delta4 <delta4chat@gmx.com>"]
edition = "2021"
description="Mozilla Root CA list from https://curl.se/ca/cacert.pem"
license="MPL-2.0"
repository="https://github.com/delta4chat/mozilla-root-ca"
keywords = ["pki", "root-ca", "mozilla", "x509", "certificate"]
categories = ["cryptography", "data-structures", "no-std", "no-std::no-alloc"]

[features]
default = ["der"]
der = ["dep:const-decoder2"]
pem = []

std = ["dep:once_cell"]
x509cert = ["pem", "dep:x509cert", "dep:lazy_static"]
x509-certificate = ["pem", "dep:x509-certificate", "dep:lazy_static"]
rustls = ["der", "dep:rustls-pki-types"]
native-tls = ["pem", "dep:native-tls", "dep:lazy_static"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
const-decoder2   = { optional = true, version = "0.5.1" }
rustls-pki-types = { optional = true, version = "1.10.1", default-features = false }

x509cert         = { optional = true, version = "0.25.1" }
x509-certificate = { optional = true, version = "0.24.0" }

lazy_static      = { optional = true, version = "1.5.0", features = ["spin_no_std"] }
once_cell        = { optional = true, version = "1.20.2" }
native-tls       = { optional = true, version = "0.2.12", default-features = false, features = ["vendored"] }

[dev-dependencies]
bytes = "1.9.0"

